Give .main-nav-close (mobile) a fixed-width container to prevent jumping in overflow: auto; scenarios

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -307,8 +307,8 @@
 .main-nav {
   width: 262px;
 
-  @include media-breakpoint-up(md) {
-    font-size: $janus-font-size-small;
+  .main-nav-close {
+    width: 64px;
   }
 
   .nav-header {
